# cymatics

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.codex/: AGENTS.md
.github/actions/setup/: action.yml
.github/workflows/: ci-workflows.yml  push-img.yml  run-docker-tests.yml  run-linters.yml  run-local-tests.yml
.serena/memories/: style_and_conventions.md  suggested_commands.md
dev/mocks/: __init__.py
dev/mocks/services/: __init__.py  mock_greeting_service.py  mock_transmutation_service.py
src/cymatics/: __init__.py
src/cymatics/api/: __init__.py  dependencies.py  main.py  router.py
src/cymatics/config/: __init__.py  app_settings.py
src/cymatics/models/: __init__.py
src/cymatics/protocols/: __init__.py  cycle_scheduler_protocol.py  transmutation_service_protocol.py
src/cymatics/services/: __init__.py  cycle_scheduler.py  transmutation_service.py
src/fapi_tmpl/api/: dependencies.py  main.py  router.py
src/fapi_tmpl/config/: app_settings.py
src/fapi_tmpl/protocols/: greeting_service_protocol.py
src/fapi_tmpl/services/: greeting_service.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/api/: test_health.py
tests/intg/: conftest.py  test_interactions.py
tests/unit/: conftest.py  test_cycle_scheduler.py  test_greeting_service.py  test_transmutation_service.py
