[project]
name = "cymatics"
version = "0.1.0"
description = "Audio/video transcription service using OpenAI Whisper with CPU-optimized inference."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.0",
    "openai-whisper>=20240930",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.1",
    "testcontainers>=4.8.0,<5.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cymatics"]

# uv configuration: Force PyTorch to use CPU-only wheels
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

# Override torch dependency from openai-whisper to use CPU version
[tool.uv]
override-dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v -s --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
    "ignore::DeprecationWarning:whisper",
]

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg",
    "reference",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["tests/", "reference/"]